# qt-wall-xml

./: CMakeLists.txt  README.md  main.cpp
xml-builder/: main.cpp  qt-xml-wall-builder
